tests/NormalTests/paczka1/fuzzy1/54174448.err
Error in line 1: iVl A533 35,0
Error in line 10: W9n A533 84,7
Error in line 12: Hph S764 4,6
Error in line 14: Hph A657 92,0
Error in line 17: A657 A533 72,4
